--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <title>Tim Broos</title>
     <meta content="My name is Tim Broos, I'm a web developer and this is my portfolio" name="description">
     <meta content="Web Developer, Resume, Portfolio, HTML, CSS, JS, Angular" name="keywords">
-
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 </head>
 <body>
