provided required meta tags

--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,18 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Tim Broos</title>
-    <meta content="My name is Tim Broos, I'm a web developer and this is my portfolio" name="description">
-    <meta content="Web Developer, Resume, Portfolio, HTML, CSS, JS, Angular" name="keywords">
+    <title>Tim Broos | Portfolio</title>
+
+    <meta name="description" content="My name is Tim Broos, I'm a web developer and this is my portfolio">
+    <meta name="keywords" content="Web Developer, Resume, Portfolio, HTML, CSS, JS, Angular, Typescript, Designer, Artist, Coach">
+    <meta name="author" content="Tim Broos">
+    <meta property="og:title" content="Web Developer Portfolio">
+    <meta property="og:image" content="assets/img/profile.jpg">
+    <meta property="og:url" content="https://timmeahj.github.io/">
+    <meta name='mobile-web-app-capable' content='yes'>
+    <meta name='apple-mobile-web-app-capable' content='yes'>
+    <meta name='apple-mobile-web-app-status-bar-style' content='black'>
+
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 </head>
